<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".ui.landing.MainActivity">

    <TextView
        style="@style/TextContent.AppName"
        android:id="@+id/tvAppName"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_rounded_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.65">

        <TextView
            style="@style/TextContent.MainTitle.Landing"
            android:id="@+id/tvLandingTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/landing_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:includeFontPadding="false"/>

        <TextView
            style="@style/TextContent.MainDesc"
            android:id="@+id/tvFunFact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/landing_funfact"
            app:layout_constraintEnd_toEndOf="@+id/tvLandingTitle"
            app:layout_constraintStart_toStartOf="@+id/tvLandingTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvLandingTitle" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:text="@string/login"
            android:textSize="16sp"
            android:background="@drawable/bg_btn"
            app:layout_constraintEnd_toEndOf="@+id/tvFunFact"
            app:layout_constraintStart_toStartOf="@+id/tvFunFact"
            app:layout_constraintTop_toBottomOf="@+id/tvFunFact"
            app:backgroundTint="@null"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>