<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.education.EducationFragment">

    <TextView
        style="@style/TextContent.HomeTitle"
        android:id="@+id/tvEducationTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:text="@string/title_ed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/TextContent.EducationDesc"
        android:id="@+id/tvEducationDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ed_desc"
        app:layout_constraintEnd_toEndOf="@+id/tvEducationTitle"
        app:layout_constraintStart_toStartOf="@+id/tvEducationTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvEducationTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvEdContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAI"
        app:layout_constraintEnd_toEndOf="@+id/tvEducationDesc"
        app:layout_constraintStart_toStartOf="@+id/tvEducationDesc"
        app:layout_constraintTop_toBottomOf="@+id/tvEducationDesc" />

    <Button
        android:id="@+id/btnAI"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="96dp"
        android:background="@drawable/bg_btn"
        android:text="@string/askgemini"
        android:textSize="16sp"
        android:drawableLeft="@drawable/gemini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rvEdContent"
        app:layout_constraintStart_toStartOf="@+id/rvEdContent"
        app:backgroundTint="@null"/>
</androidx.constraintlayout.widget.ConstraintLayout>