<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".ui.register.RegisterActivity">

    <TextView
        style="@style/TextContent.AppName"
        android:id="@+id/tvAppName"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_rounded_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.65">

        <TextView
            style="@style/TextContent.MainTitle"
            android:id="@+id/tvRegisterTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/TextContent.Label"
            android:id="@+id/tvRegisterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="@+id/tvRegisterTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvRegisterTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameEditTextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/tvRegisterTitle"
            app:layout_constraintStart_toStartOf="@+id/tvRegisterName"
            app:layout_constraintTop_toBottomOf="@+id/tvRegisterName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="16dp"
                android:hint="@string/name"
                android:inputType="text"
                android:textColor="?attr/colorOnPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/TextContent.Label"
            android:id="@+id/tvRegisterEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="@+id/nameEditTextLayout"
            app:layout_constraintTop_toBottomOf="@+id/nameEditTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailEditTextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/nameEditTextLayout"
            app:layout_constraintStart_toStartOf="@+id/tvRegisterEmail"
            app:layout_constraintTop_toBottomOf="@+id/tvRegisterEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="16dp"
                android:hint="@string/email"
                android:inputType="text"
                android:textColor="?attr/colorOnPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/TextContent.Label"
            android:id="@+id/tvRegisterPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="@+id/emailEditTextLayout"
            app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordEditTextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:endIconMode="password_toggle"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/emailEditTextLayout"
            app:layout_constraintStart_toStartOf="@+id/tvRegisterPassword"
            app:layout_constraintTop_toBottomOf="@+id/tvRegisterPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="16dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="?attr/colorOnPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:text="@string/register"
            android:textSize="16sp"
            android:background="@drawable/bg_btn"
            app:layout_constraintEnd_toEndOf="@+id/passwordEditTextLayout"
            app:layout_constraintStart_toStartOf="@+id/passwordEditTextLayout"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout"
            app:backgroundTint="@null"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>